fix (change list): remove extra margin fix (commit list): remove extra margin

--- a/src/frontend/components/change-list/change-list.css
+++ b/src/frontend/components/change-list/change-list.css
@@ -6,7 +6,7 @@ mingit-change-list {
 
 	ul {
 		flex-grow: 1;
-		width: calc(100% + 2px);
+		/* width: calc(100% + 2px); */
 		overflow: hidden auto;
 	}
 
@@ -14,7 +14,7 @@ mingit-change-list {
 		display: flex;
 		align-items: end;
 		gap: 6px;
-		width: calc(100% - 2px);
+		/* width: calc(100% - 2px); */
 		padding: 2px 13px 3px 9px;
 		cursor: pointer;
 		user-select: none;
